add ciberdatos Mariluz Congosto

--- a/_data/2020/speakers.yaml
+++ b/_data/2020/speakers.yaml
@@ -4,7 +4,6 @@
   twitter: angeles_calduch
   linkedin: ángeles-calduch-losa-a8b4038
 
-
 - name: Valeria Haro
   avatar: /assets/images/2020/speakers/valeria_haro.jpeg
   bio: "Valeria es Magíster en Gestión de la Información por la Universidad Politécnica de Valencia e Ingeniera de Sistemas por la Universidad de Cuenca del Ecuador. Actualmente tiene el rol de Ingeniera de Datos en Datamaran y está a cargo de la infraestructura en la nube, las bases de datos. Tiene 4 años de experiencia en en limpieza de datos y creación de DataWarehouse. Sus actividades de investigación e intereses se centran en procesos ETL(extracción, transformación y carga), Datawarehouse, Datamining, Learning Analytics, Dashboards, Web Semántica, Bases de datos basadas en grafos, Servicios en la nube y Chatbots."
@@ -37,7 +36,7 @@
 
 - name: Mariluz Congosto
   avatar: /assets/images/2020/speakers/mariluz_congosto.jpg
-  bio: "Mª Luz Congosto es Doctora en Telemática por la Universidad Carlos III y Licenciada en Informática por la UPM. Actualmente es profesora Honorífica del Departamento de Ingeniería Telemática de la Universidad Carlos III. Desde el año 2008 es investigadora de datos sociales, preferentemente en Twitter. Utiliza análisis de redes y visualización para descubrir patrones de comportamiento, propagación de mensajes y caracterización de usuarios. Del 1998 al 2008 Trabajó en Telefónica I+D en grandes proyectos de innovación en el entorno de las Telecomunicaciones para la operadora Telefónica. Del 1980 al 1984 perteneció al equipo de FUJITSU que desarrolló el software básico del TESIS-A."
+  bio: "Mª Luz Congosto es Doctora en Telemática por la Universidad Carlos III y Licenciada en Informática por la UPM. Actualmente es profesora Honorífica del Departamento de Ingeniería Telemática de la Universidad Carlos III. Desde el año 2008 es investigadora de datos sociales, preferentemente en Twitter. Utiliza análisis de redes y visualización para descubrir patrones de comportamiento, propagación de mensajes y caracterización de usuarios. Del 1998 al 2008 Trabajó en Telefónica I+D en grandes proyectos de innovación en el entorno de las Telecomunicaciones para la operadora Telefónica. Del 1980 al 1984 perteneció al equipo de FUJITSU que desarrolló el software básico del TESIS-A. Ciberdatos: <a rel=”external” target=_blank href=”http://barriblog”>Blog</a>, <a rel=”external” target=_blank href=”http://t-hoarder.com/experimentos.html”>Experimentos (Barómetro Social)</a>, <a rel=”external” target=_blank href=”http://t-hoarder.com/metro_madrid/”>Metroaverías</a>, <a rel=”external” target=_blank href=”http://www.slideshare.net/mlcm”>Slideshare</a>."
   twitter: congosto
   linkedin: congosto
 
