Talleres y agenda actualizados. Falta título de conferencia de Mariluz

--- a/_data/2020/partners2.yaml
+++ b/_data/2020/partners2.yaml
@@ -6,6 +6,10 @@
   image-url: /assets/images/2020/datamaran.png
   url: https://www.datamaran.com
 
+- name: Eticas Research & Consulting
+  image-url: /assets/images/2020/eticas-consulting.png
+  url: https://www.eticasconsulting.com
+
 - name: IIC
   image-url: /assets/images/2020/iic.png
   url: http://www.iic.uam.es
