--- a/_data/2020/schedule.yaml
+++ b/_data/2020/schedule.yaml
@@ -4,11 +4,11 @@
 
 - name: <a href="#workshops">Taller "Aplicando NLP para extraer y estructurar información no financiera y automatizar procesos con Airflow" - Lianet Sepúlveda y Valeria Haro</a>
   day:  1
-  time: "15:30"
+  time: "15:00"
 
 - name: Pausa
   day:  1
-  time: "17:40"
+  time: "17:50"
 
 - name: Video de Bienvenida desde WiDS Stanford
   day:  1
@@ -20,23 +20,23 @@
 
 - name: Mariluz Congosto
   day:  1
-  time: "18:05"
+  time: "18:10"
 
-- name: Carmen Torrijos
+- name: El talento digital en las humanidades":" lenguaje y texto en Inteligencia Artificial - Carmen Torrijos
   day:  1
-  time: "18:35"
+  time: "18:40"
 
-- name: Gemma Galdón
+- name: Privacidad, derechos digitales e impacto social de los datos - Gemma Galdón
   day:  1
-  time: "19:05"
+  time: "19:10"
 
-- name: Ana Freire
+- name: STOP":" el proyecto para detectar comportamiento suicida en redes sociales - Ana Freire
   day:  1
-  time: "19:35"
+  time: "19:40"
 
-- name: Nerea Luis
+- name: Arte artificial":"" la nueva revolución - Nerea Luis
   day:  1
-  time: "20:05"
+  time: "20:10"
 
 - name: Networking time
   day:  1
