--- a/_data/2020/partners2.yaml
+++ b/_data/2020/partners2.yaml
@@ -6,6 +6,10 @@
   image-url: /assets/images/2020/datamaran.png
   url: https://www.datamaran.com
 
+- name: Desvcola
+  image-url: /assets/images/2020/logo-devscola.png
+  url: https://devscola.org
+
 - name: Eticas Research & Consulting
   image-url: /assets/images/2020/eticas-consulting.png
   url: https://www.eticasconsulting.com
@@ -20,7 +24,7 @@
 
 - name: t-hoarder
   image-url: /assets/images/2020/t_hoarder.jpg
-  url: https://www.upf.edu/web/wisibilizalas
+  url: http://t-hoarder.com/experimentos.html
 
 - name: Wisibilizalas
   image-url: /assets/images/2020/wisibilizalas.png
