Botón obtén tu entrada actualizado con el link de Evenbrite

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ original_repo: https://github.com/VLCTechHub/widsvalencia2019
 
 volunteers_form: ""
 mentors_form: ""
-attendees_form: https://wids-valencia-2019.eventbrite.es
+attendees_form: https://www.eventbrite.es/e/entradas-women-in-data-science-valencia-2020-88831620769
 
 keywords: "conferencia, ciencia de datos, mujer, tecnología, Valencia, evento, marzo, UPV, MUGI, VLCTechHub"
 title: "WiDS Valencia"
