Añadido Anban como colaboración

--- a/_data/2020/partners2.yaml
+++ b/_data/2020/partners2.yaml
@@ -29,3 +29,7 @@
 - name: Wisibilizalas
   image-url: /assets/images/2020/wisibilizalas.png
   url: https://www.upf.edu/web/wisibilizalas
+
+- name: ANBAN
+  image-url: /assets/images/2020/anban.jpg
+  url: https://asociacionbigdata.es/
