--- a/_data/2020/partners2.yaml
+++ b/_data/2020/partners2.yaml
@@ -2,13 +2,17 @@
   image-url: /assets/images/2020/acm.png
   url: https://twitter.com/AcmUpv
 
-- name: Datamaran
-  image-url: /assets/images/2020/datamaran.png
-  url: https://www.datamaran.com
+- name: Query Layer
+  image-url: /assets/images/2020/logo-query-layer.png
+  url: https://www.querylayer.com
 
 - name: Desvcola
   image-url: /assets/images/2020/logo-devscola.png
   url: https://devscola.org
+
+- name: Datamaran
+  image-url: /assets/images/2020/datamaran.png
+  url: https://www.datamaran.com
 
 - name: Eticas Research & Consulting
   image-url: /assets/images/2020/eticas-consulting.png
